@@ -1,14 +1,11 @@
 package com.sptp.dawnary.diary.service;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
 import com.sptp.dawnary.diary.domain.Diary;
 import com.sptp.dawnary.diary.dto.DiaryDto;
-import com.sptp.dawnary.global.exception.DiaryNotFoundException;
 import com.sptp.dawnary.diary.repository.DiaryRepository;
+import com.sptp.dawnary.global.exception.DiaryNotFoundException;
 import com.sptp.dawnary.global.exception.MemberNotFoundException;
+import com.sptp.dawnary.global.util.GcpUtil;
 import com.sptp.dawnary.global.util.MemberInfo;
 import com.sptp.dawnary.member.domain.Member;
 import com.sptp.dawnary.member.repository.MemberRepository;
@@ -16,6 +13,9 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
+import java.util.List;
+import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
@@ -27,12 +27,14 @@ public class DiaryService {
 
     private final MemberRepository memberRepository;
 
+    private final GcpUtil gcpUtil;
+
     // 다이어리 등록
     public Diary saveDiary(Diary diary) {
         diary.setMember(getMember());
-        Diary result = diaryRepository.save(diary);
-        return result;
-    };
+        diary.setSentiment(gcpUtil.getSentiment(diary.getContent()));
+        return diaryRepository.save(diary);
+    }
 
     // 다이어리 수정
     public boolean updateDiary(Long diaryId, Diary diary) {
@@ -42,9 +44,7 @@ public class DiaryService {
             diaryRepository.save(diary);
             return true;
         }
-
         return false;
-
     }
 
     // 다이어리 삭제
@@ -52,17 +52,27 @@ public class DiaryService {
         if (diaryRepository.existsById(diaryId)) {
             diaryRepository.deleteById(diaryId);
             return true;
-        } else {
-            return false;
         }
+
+        return false;
+
     }
 
     // 다이어리 목록 조회
     public List<DiaryDto> findAllDiaries(Long memberId) {
-        List<Diary> diaries = diaryRepository.findByMemberId(memberId);
-        return diaries.stream()
+        // 로그인 멤버 == 조회 멤버 시 공개 여부 상관 X
+        if(getMember().getId() == memberId) {
+            return diaryRepository.findByMemberId(memberId)
+                    .stream()
+                    .map(DiaryDto::toDto)
+                    .toList();
+        }
+
+        // 로그인 멤버 != 조회 멤버 시 공개글만
+        return diaryRepository.findOtherUserDiaries(memberId)
+                .stream()
                 .map(DiaryDto::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // 특정 다이어리 조회
